# whatsapp-mcp

./: .dockerignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  FASTAPI_COMPLETE.md  FASTAPI_INTEGRATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  QUICK_START.md  SUMMARY.txt  docker-compose.yml
whatsapp-bridge/: go.mod  go.sum  main.go
whatsapp-mcp-server/: CLAUDE_API_GUIDE.md  Dockerfile  README_API.md  api.py  claude.py  client.py  main.py  pyproject.toml  requirements.txt  run_api.sh  server.py  start_api_with_claude.sh  test_api.py  test_claude_integration.py  whatsapp.py
